fix(control-bar): make vertical alignment of slider handles more consistent (#7990)
Fixes #7989

BREAKING CHANGE: This changes how slider handles are styled, so custom skins that are targeting them may need to change.

--- a/src/css/components/_progress.scss
+++ b/src/css/components/_progress.scss
@@ -75,7 +75,7 @@
     font-size: 0.9em;
     position: absolute;
     right: -0.5em;
-    top: -0.333333333333333em;
+    line-height: .35em;
     z-index: 1;
   }
 }
